--- a/ansible_macos_query/vars/main.yml
+++ b/ansible_macos_query/vars/main.yml
@@ -1,5 +1,5 @@
 ---
 # vars file for ansible_macos_query
-files_path: /Users/jenkins/.jenkins/jobs #Jenkins var {{ lookup('env','FILES_PATH') }}
-files_age: 4w  #Jenkins var {{ lookup('env','FILES_AGE') }}
-files_size: 100m #Jenkins var {{ lookup('env','FILES_SIZE') }}
+files_path: "{{ lookup('env','FILES_PATH') }}" #/Users/jenkins/.jenkins/jobs #Jenkins var {{ lookup('env','FILES_PATH') }}
+files_age: "{{ lookup('env','FILES_AGE') }}" #4w  #Jenkins var {{ lookup('env','FILES_AGE') }}
+files_size: "{{ lookup('env','FILES_SIZE') }}" #100m #Jenkins var {{ lookup('env','FILES_SIZE') }}
